# cooperative-perception

./: .gitignore  CMakeLists.txt  package.xml
config/: param_2.json  param_4.json
examples/cpp_models/cooperative_recognition/: cooperative_recognition.h
examples/cpp_models/ras/: CMakeLists.txt  Makefile  OperatorModel.h  operator_model.cpp  operator_model.h  param.json  param2.json  param_adsgood.json  param_future.json  param_mix.json  param_myopic_eval.json  param_opegood.json  param_pie.json  param_pie_tlr.json  ras  ras.cpp  ras.h  straight.net.xml  straight_ped.rou.xml
examples/cpp_models/ras/include/: libgeometry.h  operator_model.h  ras_world.h  sumo_interface.h  task_allocation.h  vehicle_model.h
examples/cpp_models/ras/log/: 1231908137816log.json  202381371224log.json  DESPOT0.010000_20230819070601.json  DESPOT0.010000_20230819081423.json  DESPOT0.010000_20230819081636.json  DESPOT0.010000_20230819083731.json  MYOPIC0.010000_20230819015247.json  MYOPIC0.010000_20230819015254.json  MYOPIC0.010000_20230819015301.json  MYOPIC0.010000_20230819063456.json  MYOPIC0.010000_20230819083923.json  MYOPIC0.010000_20230819084717.json  MYOPIC0.010000_20230819084919.json  MYOPIC0.010000_20230819085014.json  analyze.py  analyze.sh  analyze_future.py  demo.xml  evaluation.sh  log.json  log20230813071824.json  log20230813072151.json  log20230813073649.json  log20230813074059.json
examples/cpp_models/ras/map/: straight.sumocfg  straight_long.net.xml  straight_vehicle.rou.xml
examples/cpp_models/ras/param/: param.json  param1.json  param2.json  param3.json  param4.json  param_future.json  param_mix.json  param_opebad.json  param_pie_tlr.json
examples/cpp_models/ras/src/: .operator_model.cpp.swp  .ras.cpp.swp  .ras.h.swp  baseline_solver.cpp  main.cpp  operator_model.cpp  operator_model.h  ras.cpp  ras.h  ras_world.cpp  ras_world.h  sumo_interface.cpp  sumo_interface.h  target_select.cpp  task_allocation.cpp  vehicle_model.cpp  vehicle_model.h
examples/cpp_models/ras/sumo/: play_sumo  play_sumo.cpp  play_sumo.h  random_ped.trips.trip  straight.rou.xml  straight_random.sumocfg  straight_vehicle.rou.xml  test  test_traci.cpp
examples/cpp_models/ras/test/: CMakeLists.txt  analyze_pie.py  eval_params.py  param_1.json  param_10.json  param_2.json  param_3.json  param_4.json  sample_from_nd.py  test.json  test_task_allocation.cpp  test_traci.cpp  test_vehicle_model.cpp
examples/cpp_models/ras/test_origin/: CMakeLists.txt  main.cpp  operator_model.cpp  ras.cpp  ras.h
examples/cpp_models/simple_rock_sample/: simple_rs
examples/cpp_models/tiger/: tiger
include/: cp_world.hpp
include/cooperative_perception/: cooperative_perception.hpp  cp_pomdp.h  cp_pomdp.hpp  cp_ros_interface.hpp  cp_server.hpp  cp_world.hpp  libgeometry.h  libgeometry.hpp  modelbase_planner.hpp  operator_model.h  operator_model.hpp  ras_world.h  sumo_interface.h  task_allocation.h  vehicle_model.hpp
include/cooperative_perception_planner/: cooperative_perception_planner.hpp  libgeometry.h  vehicle_model.h
msg/: CPIntervention.msg  CPPredictedObject.msg  Intervention.msg
src/: cooperative_perception.cpp  cooperative_perception_planner.cpp  cp_pomdp.cpp  cp_ros_interface.cpp  cp_server.cpp  cp_world.cpp  logger.cpp  main.cpp  modelbase_planner.cpp  operator_model.cpp  ras_world.cpp  task_allocation.cpp  vehicle_model.cpp
srv/: Intervention.srv  State.srv  UpdatePerception.srv
